# edf

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  reader.rs
