[package]
name = "edf"
version = "0.0.0-alpha.0"
description = "A parser for medical time series data, with support for Serde."
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/allan2/edf/"
keyword = ["edf", "eeg", "electroencephalogram"]
categories = ["parser-implementations", "parsing", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
